poc: fix overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,4 +17,5 @@ button {
 
 .example-container {
   max-height: 100%;
+  overflow-y: auto;
 }
